build_log_utf8.txt
Γû▓ Next.js 16.2.1 (Turbopack)
- Environments: .env.local

  Creating an optimized production build ...
node.exe : Error: Cannot 
apply unknown utility class 
`border-slate-800`. Are you 
using CSS modules or similar 
and missing `@reference`? htt
ps://tailwindcss.com/docs/fun
ctions-and-directives#referen
ce-directive
At C:\Users\fisky\AppData\Roa
ming\npm\npx.ps1:24 char:5
+     & "node$exe"  "$basedir
/node_modules/npm/bin/npx-cli
.js" $args
+     ~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~
    + CategoryInfo           
   : NotSpecified: (Error:   
  Cannot a...rence-directi   
 ve:String) [], RemoteExc    
eption
    + FullyQualifiedErrorId  
   : NativeCommandError
 
    [2m[at 
onInvalidCandidate (E:\panave
rsity\hackathon-0\frontend\no
de_modules\tailwindcss\dist\l
ib.js:21:1314)][0m
    [2m[at Ee (E:\panaversit
y\hackathon-0\frontend\node_m
odules\tailwindcss\dist\lib.j
s:16:37066)][0m
    [2m[at E:\panaversity\ha
ckathon-0\frontend\node_modul
es\tailwindcss\dist\lib.js:21
:355][0m
    [2m[at _r (E:\panaversit
y\hackathon-0\frontend\node_m
odules\tailwindcss\dist\lib.j
s:3:1733)][0m
    [2m[at I (E:\panaversity
\hackathon-0\frontend\node_mo
dules\tailwindcss\dist\lib.js
:3:1377)][0m
    [2m[at Te (E:\panaversit
y\hackathon-0\frontend\node_m
odules\tailwindcss\dist\lib.j
s:21:172)][0m
    [2m[at mn (E:\panaversit
y\hackathon-0\frontend\node_m
odules\tailwindcss\dist\lib.j
s:38:294)][0m
    [2m[at process.processTi
cksAndRejections (node:intern
al/process/task_queues:103:5)
][0m
    [2m[at async gn (E:\pana
versity\hackathon-0\frontend\
node_modules\tailwindcss\dist
\lib.js:38:631)][0m
    [2m[at async Xr (E:\pana
versity\hackathon-0\frontend\
node_modules\@tailwindcss\nod
e\dist\index.js:10:3416)][0m

> Build error occurred
Error: Turbopack build 
failed with 4 errors:
./app/globals.css
Error evaluating Node.js code
CssSyntaxError: tailwindcss: 
E:\panaversity\hackathon-0\fr
ontend\app\globals.css:1:1: 
Cannot apply unknown utility 
class `border-slate-800`. 
Are you using CSS modules or 
similar and missing 
`@reference`? https://tailwin
dcss.com/docs/functions-and-d
irectives#reference-directive
    at Input.error (node_modu
les/postcss/lib/input.js:135:
16) [E:\panaversity\hackathon
-0\frontend\.next\build\chunk
s\node_modules_13sb.px._.js:4
651:22]
    at error (node_modules/po
stcss/lib/node.js:146:32) [E:
\panaversity\hackathon-0\fron
tend\.next\build\chunks\node_
modules_13sb.px._.js:928:38]
    [at Object.Once (E:\panav
ersity\hackathon-0\frontend\n
ode_modules\@tailwindcss\post
css\dist\index.js:10:6913)]
    [at process.processTicksA
ndRejections (node:internal/p
rocess/task_queues:103:5)]
    at async 
LazyResult.runAsync (node_mod
ules/postcss/lib/lazy-result.
js:293:11) [E:\panaversity\ha
ckathon-0\frontend\.next\buil
d\chunks\node_modules_13sb.px
._.js:6214:21]
    at async transform (turbo
pack:///[turbopack-node]/tran
sforms/postcss.ts:70:34) [E:\
panaversity\hackathon-0\front
end\.next\build\chunks\[root-
of-the-server]__0d-m0h0._.js:
146:36]
    at async run (turbopack:/
//[turbopack-node]/child_proc
ess/evaluate.ts:89:23) [E:\pa
naversity\hackathon-0\fronten
d\.next\build\chunks\[root-of
-the-server]__0ubbtyl._.js:44
3:31]

Import trace:
  Client Component Browser:
    ./app/globals.css 
[Client Component Browser]
    ./app/layout.tsx [Server 
Component]


./components/Footer.tsx:4:1
Export Github doesn't exist 
in target module
  [90m2 |[0m
  [90m3 |[0m 
[36mimport[0m 
[33mLink[0m [36mfrom[0m 
[32m"next/link"[0m;
[31m[1m>[0m [90m4 |[0m 
[36mimport[0m { 
[33mGithub[0m, 
[33mLinkedin[0m, 
[33mTwitter[0m, 
[33mMail[0m, [33mCpu[0m 
} [36mfrom[0m 
[32m"lucide-react"[0m;
  [90m  |[0m [31m[1m^^^^^
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
^^^^^[0m
  [90m5 |[0m
  [90m6 |[0m 
[36mexport[0m 
[36mfunction[0m 
[33mFooter[0m() {
  [90m7 |[0m   
[36mconst[0m currentYear = 
[36mnew[0m [33mDate[0m().
getFullYear();

The export Github was not 
found in module [project]/nod
e_modules/lucide-react/dist/e
sm/lucide-react.js [app-rsc] 
(ecmascript).
Did you mean to import Gift?
All exports of the module 
are statically known (It 
doesn't have dynamic 
exports). So it's known 
statically that the 
requested export doesn't 
exist.

Import trace:
  Server Component:
    ./components/Footer.tsx
    ./app/layout.tsx


./components/Footer.tsx:4:1
Export Linkedin doesn't 
exist in target module
  [90m2 |[0m
  [90m3 |[0m 
[36mimport[0m 
[33mLink[0m [36mfrom[0m 
[32m"next/link"[0m;
[31m[1m>[0m [90m4 |[0m 
[36mimport[0m { 
[33mGithub[0m, 
[33mLinkedin[0m, 
[33mTwitter[0m, 
[33mMail[0m, [33mCpu[0m 
} [36mfrom[0m 
[32m"lucide-react"[0m;
  [90m  |[0m [31m[1m^^^^^
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
^^^^^[0m
  [90m5 |[0m
  [90m6 |[0m 
[36mexport[0m 
[36mfunction[0m 
[33mFooter[0m() {
  [90m7 |[0m   
[36mconst[0m currentYear = 
[36mnew[0m [33mDate[0m().
getFullYear();

The export Linkedin was not 
found in module [project]/nod
e_modules/lucide-react/dist/e
sm/lucide-react.js [app-rsc] 
(ecmascript).
Did you mean to import Link?
All exports of the module 
are statically known (It 
doesn't have dynamic 
exports). So it's known 
statically that the 
requested export doesn't 
exist.

Import trace:
  Server Component:
    ./components/Footer.tsx
    ./app/layout.tsx


./components/Footer.tsx:4:1
Export Twitter doesn't exist 
in target module
  [90m2 |[0m
  [90m3 |[0m 
[36mimport[0m 
[33mLink[0m [36mfrom[0m 
[32m"next/link"[0m;
[31m[1m>[0m [90m4 |[0m 
[36mimport[0m { 
[33mGithub[0m, 
[33mLinkedin[0m, 
[33mTwitter[0m, 
[33mMail[0m, [33mCpu[0m 
} [36mfrom[0m 
[32m"lucide-react"[0m;
  [90m  |[0m [31m[1m^^^^^
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
^^^^^[0m
  [90m5 |[0m
  [90m6 |[0m 
[36mexport[0m 
[36mfunction[0m 
[33mFooter[0m() {
  [90m7 |[0m   
[36mconst[0m currentYear = 
[36mnew[0m [33mDate[0m().
getFullYear();

The export Twitter was not 
found in module [project]/nod
e_modules/lucide-react/dist/e
sm/lucide-react.js [app-rsc] 
(ecmascript).
Did you mean to import Timer?
All exports of the module 
are statically known (It 
doesn't have dynamic 
exports). So it's known 
statically that the 
requested export doesn't 
exist.

Import trace:
  Server Component:
    ./components/Footer.tsx
    ./app/layout.tsx


    at async transform (turbo
pack:///[turbopack-node]/tran
sforms/postcss.ts:70:34) [E:\
panaversity\hackathon-0\front
end\.next\build\chunks\[root-
of-the-server]__0d-m0h0._.js:
146:36])
    at async run (turbopack:/
//[turbopack-node]/child_proc
ess/evaluate.ts:89:23) [E:\pa
naversity\hackathon-0\fronten
d\.next\build\chunks\[root-of
-the-server]__0ubbtyl._.js:44
3:31])
    at <unknown> 
(./components/Footer.tsx:4:1)
    at <unknown> 
(./components/Footer.tsx:4:1)
    at <unknown> 
(./components/Footer.tsx:4:1)
